# rules_freecad

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/: BUILD.bazel
test/: BUILD.bazel  main.py
tools/: BUILD  BUILD.bazel.tpl  Context.md  extensions.bzl  extract.bzl  py_distrubution.bzl
