""" Bazel module definition for rules_freecad """

module(
    name = "rules_freecad",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(
    name = "rules_python",
    version = "1.6.3",
)

bazel_dep(
    name = "platforms",
    version = "1.0.0",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)

python.toolchain(
    python_version = "3.11",
    is_default = False,
)
use_repo(python, "python_3_11", "python_versions", "pythons_hub")

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
)
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",  # Or requirements.txt if you want Bazel to generate the lock file
)
use_repo(pip, "pypi")

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_file(
    name = "freecad",
    url = "https://github.com/FreeCAD/FreeCAD/releases/download/1.0.2/FreeCAD_1.0.2-conda-Linux-x86_64-py311.AppImage",
    sha256 = "e00be00ad9fdb12b05c5002bfd1aa2ea8126f2c1d4e2fb603eb7423b72904f61",
    executable = True,
    downloaded_file_path = "freecad.AppImage",
)

http_archive(
    name = "7zip_linux_x64",
    url = "https://7-zip.org/a/7z2408-linux-x64.tar.xz",
    sha256 = "9b3a2edf0644a2b00b0a39ab6843f426128e4a6f6f98c40f8c02a668e5b5b59b",
    build_file_content = """
filegroup(
    name = "binary",
    srcs = ["7zzs"],
    visibility = ["//visibility:public"],
)
""",
)

http_archive(
    name = "7zip_macos",
    url = "https://7-zip.org/a/7z2408-mac.tar.xz",
    sha256 = "4d87dae186279ff717749abae3c75dc6f29ce5aea370aa42db4b8083299a9055",
    build_file_content = """
filegroup(
    name = "binary",
    srcs = ["7zz"],
    visibility = ["//visibility:public"],
)
""",
)

http_file(
    name = "freecad_macos_arm64",
    url = "https://github.com/FreeCAD/FreeCAD/releases/download/1.0.2/FreeCAD_1.0.2-conda-macOS-arm64-py311.dmg",
    sha256 = "2fde16da356b62cfce656cd12effaa79f97f2f28a71f1520dd90fabb88f9d3fd",
    downloaded_file_path = "freecad.dmg",
)

custom_python_extension = use_extension(
    "//tools:extensions.bzl",
    "custom_python_extension",
)
use_repo(custom_python_extension, "python_interpreter_linux_x86_64", "python_interpreter_macos_arm64")
register_toolchains(
    "@python_interpreter_linux_x86_64//:freecad_toolchain",
    "@python_interpreter_macos_arm64//:freecad_toolchain",
)

